--- a/css/style.css
+++ b/css/style.css
@@ -409,13 +409,13 @@ li.menu__item:nth-child(6) {
     width: 100%;
 }
 .agileits-banner-info h4 {
-    font-size: 4em;
-    color: #ffce14;
-    letter-spacing: 27px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
-}
+	font-size: 4em;
+	color: #ffce14;
+	letter-spacing: 27px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-family: 'Oswald', sans-serif;
+}  
 .agileits-banner-info h3 {
     color: #fff;
     font-size: 1.5em;
@@ -432,7 +432,12 @@ li.menu__item:nth-child(6) {
     text-align: center;
     padding: 7em 2em;
     margin-top: 8em;
-}
+	border:  3px;
+	border-style: hidden;
+	border-radius: 50px;
+	border-color: #ffffff;
+	background: rgba(0, 0, 0, 0.33);
+} 
 .agileits-banner-info p {
     color: #ffce14;
     font-size: 1em;
@@ -455,7 +460,7 @@ li.menu__item:nth-child(6) {
     position: relative;
     display: inline-block;
     background: #0f2453;
-	    margin-top: 3em;
+	margin-top: 3em;
     z-index: 9999;
     border: 2px solid #fff;
 }
@@ -1186,16 +1191,16 @@ p.about-para-w3ls {
 /*-- team --*/
 
 .tab1 .team-img-w3-agile{
-	  background: url(../images/teamb1.jpg)no-repeat 0px 0px;
+	  background: url(../images/eliza.jpeg)no-repeat 0px 0px;
 }
 .tab2 .team-img-w3-agile{
-	  background: url(../images/teamb2.jpg)no-repeat 0px 0px;
+	  background: url(../images/lovely.jpg)no-repeat 0px 0px;
 }
 .tab3 .team-img-w3-agile{
-	  background: url(../images/teamb3.jpg)no-repeat 0px 0px;
+	  background: url(../images/reinan.jpg)no-repeat 0px 0px;
 }
 .tab4 .team-img-w3-agile{
-	  background: url(../images/teamb4.jpg)no-repeat 0px 0px;
+	  background: url(../images/junpyo.jpg)no-repeat 0px 0px;
 }
 .tab1 .team-img-w3-agile,.tab2 .team-img-w3-agile,.tab3 .team-img-w3-agile,.tab4 .team-img-w3-agile{
 	-webkit-background-size: cover;
